[gd_scene load_steps=26 format=2]

[ext_resource path="res://Assets/Scripts/PlayerMovement.gd" type="Script" id=1]
[ext_resource path="res://Assets/Scripts/player_anims.gd" type="Script" id=2]
[ext_resource path="res://Assets/Materials/DissolveMaterial.tres" type="Material" id=3]
[ext_resource path="res://Assets/Player/Dark/Idledark-1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Player/Dark/Idledark-2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Player/Dark/000_Walkdark.png" type="Texture" id=6]
[ext_resource path="res://Assets/Player/Dark/001_Walkdark.png" type="Texture" id=7]
[ext_resource path="res://Assets/Player/Dark/002_Walkdark.png" type="Texture" id=8]
[ext_resource path="res://Assets/Player/Dark/003_Walkdark.png" type="Texture" id=9]
[ext_resource path="res://Assets/Player/Dark/004_Walkdark.png" type="Texture" id=10]
[ext_resource path="res://Assets/Player/Dark/005_Walkdark.png" type="Texture" id=11]
[ext_resource path="res://Assets/Materials/DissolveMaterialBlue.tres" type="Material" id=12]
[ext_resource path="res://Assets/Player/Light/Idlelight-01.png" type="Texture" id=13]
[ext_resource path="res://Assets/Player/Light/Idlelight-02.png" type="Texture" id=14]
[ext_resource path="res://Assets/Player/Light/000_Walklight.png" type="Texture" id=15]
[ext_resource path="res://Assets/Player/Light/001_Walklight.png" type="Texture" id=16]
[ext_resource path="res://Assets/Player/Light/002_Walklight.png" type="Texture" id=17]
[ext_resource path="res://Assets/Player/Light/003_Walklight.png" type="Texture" id=18]
[ext_resource path="res://Assets/Player/Light/004_Walklight.png" type="Texture" id=19]
[ext_resource path="res://Assets/Player/Light/005_Walklight.png" type="Texture" id=20]
[ext_resource path="res://GdBwzWA.png" type="Texture" id=21]
[ext_resource path="res://Assets/Scripts/PlayerLight.gd" type="Script" id=24]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 5.33155
height = 8.24407

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )
speed_dash = 700
shadow_color = [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]

[node name="Animations" type="Node2D" parent="."]
light_mask = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Animations"]
light_mask = 2
material = ExtResource( 3 )
z_index = 1
frames = SubResource( 1 )
animation = "idle"
frame = 1
playing = true

[node name="LightAnimation" type="AnimatedSprite" parent="Animations"]
visible = false
material = ExtResource( 12 )
z_index = -1
frames = SubResource( 2 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.372, 0.276 )
z_index = 2
shape = SubResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
scale = Vector2( 1, 0.5 )
enabled = true
cast_to = Vector2( 6, 0 )

[node name="dash_time" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="spawner_timer" type="Timer" parent="."]
wait_time = 0.05

[node name="wall_jump_timer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 21 )
color = Color( 0, 0.529412, 1, 1 )
script = ExtResource( 24 )
light_color = [ Color( 1, 0, 0, 1 ), Color( 0, 0.529412, 1, 1 ) ]
[connection signal="timeout" from="dash_time" to="." method="_on_dash_time_timeout"]
[connection signal="timeout" from="spawner_timer" to="." method="_on_spawner_timer_timeout"]
[connection signal="timeout" from="wall_jump_timer" to="." method="_on_wall_jump_timer_timeout"]
